Fixed spacing issues Added timestamps

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -79,10 +79,6 @@ body {
 }
 
 /* Custom styles */
-.search-box {
-  margin-top: 30px;
-}
-
 .content {
   margin-top: 35px;
 }
